# homeworkBot

./: Makefile  README.md  config.py  main.py  pyproject.toml
