[tool.poetry]
name = "homeworkbot"
version = "0.1.0"
description = ""
authors = ["yakus <yakushevi4.a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
bs4 = "^0.0.1"
python-dotenv = "^1.0.0"
pytelegrambotapi = "^4.13.0"
lxml = "^4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
